--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
         <link rel="stylesheet" href="css/leaflet.css">
         <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
         <style>
-        #map {
-            width: 1380px;
-            height: 822px;
+        html, body, #map {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
         }
         </style>
         <title></title>
@@ -28,10 +30,11 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
+        <script src="data/test_1.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[35.88383979229451,128.7654081763291],[35.92121600683191,128.842950216154]]);
+        }).fitBounds([[35.9001280933282,128.79070699146592],[35.91224292885543,128.81015107486337]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -51,6 +54,60 @@
         });
         layer_OpenStreetMap_0;
         map.addLayer(layer_OpenStreetMap_0);
+        function pop_test_1(feature, layer) {
+            var popupContent = '<table>\
+                    <tr>\
+                        <th scope="row">id</th>\
+                        <td>' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">대학</th>\
+                        <td>' + (feature.properties['대학'] !== null ? autolinker.link(feature.properties['대학'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">호관</th>\
+                        <td>' + (feature.properties['호관'] !== null ? autolinker.link(feature.properties['호관'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent, {maxHeight: 400});
+        }
+
+        function style_test_1_0() {
+            return {
+                pane: 'pane_test_1',
+                radius: 8.0,
+                opacity: 1,
+                color: 'rgba(128,17,25,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 2.0,
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(219,30,42,1.0)',
+                interactive: true,
+            }
+        }
+        map.createPane('pane_test_1');
+        map.getPane('pane_test_1').style.zIndex = 401;
+        map.getPane('pane_test_1').style['mix-blend-mode'] = 'normal';
+        var layer_test_1 = new L.geoJson(json_test_1, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_test_1',
+            layerName: 'layer_test_1',
+            pane: 'pane_test_1',
+            onEachFeature: pop_test_1,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.circleMarker(latlng, style_test_1_0(feature));
+            },
+        });
+        bounds_group.addLayer(layer_test_1);
+        map.addLayer(layer_test_1);
         setBounds();
         </script>
     </body>
